# tag

./: .gitignore  Cargo.toml  LICENSE.md  README.md  query.pest  tagline.pest
.cargo/: config.toml
.github/workflows/: rust.yml
src/: commands.rs  explore.rs  inspect.rs  lib.rs  main.rs  parsers.rs  search.rs
