[package]
name = "tag"
authors = ["miampf"]
version = "0.2.0"
edition = "2021"
description = "Search for local text files with a simple tagging system."
license = "MIT"
repository = "https://github.com/miampf/tag"
homepage = "https://github.com/miampf/tag"
keywords = ["organization", "tagging", "plaintext", "searching"]
categories = ["command-line-utilities", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.27.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
pest = "2.7.6"
pest_derive = "2.7.6"
ratatui = "0.25.0"
textwrap = "0.16.0"
walkdir = "2.4.0"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
suspicious = "warn"
complexity = "deny"
perf = "deny"
style = "deny"
